--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class="page-header">
+<div class="login-signup-header">
   <h1><%=t ".title", default: "Sign Up" %></h1>
 </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal form-user"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal form-user-salmon"}) do |f| %>
   <%= devise_error_messages! %>
 
   
@@ -41,11 +41,6 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <div class="col-md-offset-4 col-md-8">
-      <%= render "devise/shared/links" %>
-    </div>
-  </div>
 
 <% end %>
 
