--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<div class="content">
+    <div class="homepage-well">
+        <h1>Welcome to HoursUntil</h1>
+        <p>Unilmited. Free. Countdowns.</p>
+    </div>
+</div>
